*idea-community-12.1.5.129.1328 (04 Oct 2013)

  04 Oct 2013; Manuel Rüger <mrueg@gentoo.org>
  +idea-community-12.1.5.129.1328.ebuild, -idea-community-12.1.4.129.713.ebuild:
  Version bump.

*idea-community-12.1.4.129.713 (17 Jun 2013)

  17 Jun 2013; Manuel Rüger <gentoo@rueg.eu>
  +idea-community-12.1.4.129.713.ebuild, -idea-community-12.1.3.129.451.ebuild:
  dev-util/idea-community: Version bump

*idea-community-12.1.3.129.451 (16 May 2013)

  16 May 2013; Manuel Rüger <gentoo@rueg.eu>
  +idea-community-12.1.3.129.451.ebuild, -idea-community-12.1.2.129.354.ebuild:
  dev-util/idea-community: Version bump

*idea-community-12.1.2.129.354 (27 Apr 2013)

  27 Apr 2013; Manuel Rüger <gentoo@rueg.eu>
  +idea-community-12.1.2.129.354.ebuild, -idea-community-12.1.1.129.239.ebuild:
  dev-util/idea-community: Version bump

*idea-community-12.1.1.129.239 (16 Apr 2013)

  16 Apr 2013; Manuel Rueger (mrueg) gentoo@rueg.eu
  +idea-community-12.1.1.129.239.ebuild, -idea-community-12.1.0.129.161.ebuild:
  dev-util/idea-community: Version bump

*idea-community-12.1.0.129.161 (06 Apr 2013)

  06 Apr 2013; Manuel Rüger <gentoo@rueg.eu>
  +idea-community-12.1.0.129.161.ebuild, -idea-community-12.0.4.123.169.ebuild:
  dev-util/idea-community: Version bump

*idea-community-12.0.4.123.169 (14 Feb 2013)

  14 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu
  +idea-community-12.0.4.123.169.ebuild, -idea-community-12.0.3.123.155.ebuild:
  dev-util/idea-community: Version bump

*idea-community-12.0.3.123.155 (09 Feb 2013)

  09 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu
  +idea-community-12.0.3.123.155.ebuild, -idea-community-12.0.2.123.123.ebuild:
  dev-util/idea-community: Version bump

*idea-community-12.0.2.123.123 (26 Jan 2013)

  26 Jan 2013; Manuel Rueger (mrueg) gentoo@rueg.eu
  +idea-community-12.0.2.123.123.ebuild, -idea-community-12.0.1.123.94.ebuild:
  dev-util/idea-community: Version bump

*idea-community-12.0.1.123.94 (26 Dec 2012)
