@@ -1,1 +1,2 @@
 DIST ideaIC-12.1.6.tar.gz 121863978 SHA256 8113e0c13ce92859c69bb0d2fd055049c8b702c2c237362c151dc8f638d79e33 SHA512 1b6df4127c15385f8ea7d364fc8dc0c9be4e7bf31e2ec561ac2fdf853f40a8ab698dfd7d8a5622da45f7d0d0600a90c1243081b44609a0320ef8bbc66598e4bd WHIRLPOOL dbb97bf934b61a42a3bc382119313172630c1f9b5b7bab52c79d7dbb8add4cad0b9e6cd5794106d5d358d30cdf2b3d8b7a44957506f0c3e14d38002f1eea77dc
+DIST ideaIC-13.tar.gz 164640124 SHA256 5cd88b8effc5e4e55d999df1cec6f54c53b5adf0b88e49400b3a185bef7db13a SHA512 e0cd779489144777fb452b921d9bce146f6e8e4c317436db0d2dde34fcbd55086094810de938676a4906a43670e27d4fb0dfcb477330fc1f679c17dc50f13242 WHIRLPOOL cb595894cb176b27f23567bf912657eb91c9cbbe5b8d69ecefecb355e281e036518104b4d11d47c8b5b5e0e862a32ec8b845735637ced451e5e1ebeda8a7cfda
