@@ -1,3 +1,9 @@
+*idea-community-13.0.0.133.193 (11 Dec 2013)
+
+  11 Dec 2013; Manuel Rüger <mrueg@gentoo.org>
+  +idea-community-13.0.0.133.193.ebuild:
+  Version bump.
+
 *idea-community-12.1.5.129.1328 (04 Oct 2013)
 
   04 Oct 2013; Manuel Rüger <mrueg@gentoo.org>
